# COURSE_WORK_7_DRF_SKYPRO_MALYAROFF

./: .gitignore  README.md  pyproject.toml  requirements.txt
habit_tracker/: celery.py
habit_tracker/habit_tracker/: asgi.py  settings.py  urls.py  wsgi.py
habit_tracker/habits/: apps.py  models.py  serializers.py  tasks.py  telegram_bot.py  tests.py  urls.py  views.py
habit_tracker/habits/migrations/: 0001_initial.py
