[tool.poetry]
name = "course-work-7-drf-skypro-malyaroff"
version = "0.1.0"
description = ""
authors = ["Sergey Malyarov <sergey@malyaroff.com>"]
readme = "README.md"
packages = [{include = "course_work_7_drf_skypro_malyaroff"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

